# meridiano

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  app.py  config.py  config_base.py  database.py  main.py  migrate.py  models.py  pyproject.toml  requirements.txt  run_briefing.py  utils.py
.github/workflows/: ci.yml
docker/: Dockerfile  compose.yml
feeds/: brasil.py  default.py  tech.py
src/meridiano/: __init__.py  app.py  config_base.py  database.py  migrate.py  models.py  ollama.py  run_briefing.py  utils.py
src/meridiano/feeds/: brasil.py  default.py  infosec.py  tech.py  test.py
src/meridiano/static/css/: style.css
src/meridiano/templates/: _article_item.html  add_article.html  collection_detail.html  collections.html  head.html  header.html  view_article.html  view_brief.html
static/: style.css
static/css/: style.css
templates/: add_article.html  articles.html  brief.html  header.html  index.html  view_article.html  view_brief.html
tests/: README.md  conftest.py  test_app.py  test_database.py  test_models.py  test_utils.py
tests/integration/: test_run_briefing.py
